apps/nginx-hello/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
spec:
  selector:
    app: nginx-hello
  ports:
    - port: 80
      targetPort: 80
